# nav_ui

./: CMakeLists.txt  package.xml  pyproject.toml
include/nav_ui/: qprocess_learn.hpp
scripts/: control_ui.py
src/: qprocess.cpp  qprocess_learn.cpp
src/nav_ui/: __init__.py  lifecycle_ui.py
src/nav_ui/ui_directory/: state_control.ui
