[project]
name = "nav-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "aky", email = "akiyugata271@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "opencv-contrib-python>=4.11.0.86",
    "opencv-python>=4.11.0.86",
    "pyqt5>=5.15.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
